frontend/test/should_fail/array_access_map_array2.grg
rule r implements mc
{
	n:Node;
---
	def var i:int;
	def var j:int;

	yield {
		yield i = incident(n).size();
		yield j = 0;
	}
	
	modify {
		delete(n);
	}
} \ orderAscendingBy<i>

match class mc
{
	n:Node;
	def var i:int;
	def var j:int;
} \ orderAscendingBy<i>

test r_map_array(ref a:array<int>)
{
	if{ a.map<double>{this_:set<string>; m:int -> this_.size()}.size() > 0; }
}
